0.182

- Retry SpnegoAuthentication on network related exceptions.
- Allow adding fractional weights to QuantileDigest.

0.181

- Fix JAX-RS warning for missing JAXB APIs on Java 9.
- Remove support for non-explicit JAX-RS bindings.
- Add config for HTTP server max response header size.

0.180

- Run life cycle methods on instances from providers.
- Log HTTP server requests even when body is not read.
- Hide HTTP Client's key/trust store passwords from logs.
- Add installModuleIf method to ConditionalModule with ability to
  install module when condition is not met.
- Allow configuring Kerberos GSS name type for HTTP client.
- Exclude tar.gz files from server tarballs.

0.179

- Update to BVal 2.0.0
- Report server port when bind fails in HttpServer.
- Redirect from /resource to /resource/
- Add future callback overloads that take an executor.
- Allow configuring the HTTP client Kerberos service principal pattern.

0.178

- Limit the size of HTTP server request log by default.
- Prevent ClassPathResourceHandler from using default encoding.
- Make joda-time dependency optional for JSON module.
- Return correct status code from JaxrsTestingHttpProcessor.

0.177

- Update to Jetty 9.4.14.v20181114.

0.176

- Upgrade to Jackson 2.9.7
- Fix extraction of level when deserializing QuantileDigest.

0.175

- Require at least one stream for HTTP/2 in HTTP server.
- Fix /v1/jmx HTML page loading in modern browsers.
- Fix loading of properties files when platform's default encoding is not
  ASCII-compatible.
- Add configuration properties for request and response HTTP client buffer sizes.
- Install Jackson ParameterNamesModule module by default.
- Stop request log on HTTP server shutdown.
- Improve Quantile Digest serialization format to use less space and to
  include a version number. The format is now stable and documented.
- Optimize performance of Quantile Digest histogram construction.

0.174

- Add configuration properties to include/exclude HTTPS cipher suites for