@@ -2,6 +2,7 @@
 
 - Retry SpnegoAuthentication on network related exceptions.
 - Allow adding fractional weights to QuantileDigest.
+- Show JVM config hint when JMX agent start fails on Java 9+.
 
 0.181
 
